<resources>
    <string name="app_name">Rich Pleasure Academy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="don_t_say_you_don_t_have_enough_time_you_have_exactly_the_same_number_of_hours_per_day_that_were_given_to_everyone">Don’t say you don’t have enough time. You have exactly the same number of hours per day that were given to everyone</string>
    <string name="math_form_5">Math Form 5</string>
    <string name="math_form_4">Math Form 4</string>
    <string name="physics_form_5">Physics Form 5</string>
    <string name="physics_form_4">Physics Form 4</string>
    <string name="add_math_form_5">Add Math Form 5</string>
    <string name="add_math_form_4">Add Math Form 4</string>
    <string name="form_4">Form 4</string>
    <string name="form_5">Form 5</string>
    <string name="form_1">Form 1</string>
    <string name="form_2">Form 2</string>
    <string name="spm_seminar_2017">SPM Seminar 2017</string>
    <string name="add_maths_notes">Add Maths Notes</string>
    <string name="fizik_notes">Fizik Notes</string>
    <string name="add_math_paper_1">Add Math Paper 1</string>
    <string name="add_math_paper_2">Add Math Paper 2</string>
    <string name="add_math_notes">Add Math Notes</string>
    <string name="physics_notes">Physics Notes</string>
    <string name="matematik_tambahan_notes">Matematik Tambahan Notes</string>
    <string name="matematik_tambahan_ppt">Matematik Tambahan (PPT)</string>
    <string name="fizik_ppt">Fizik (PPT)</string>
    <string name="spm_seminar_2016">SPM Seminar 2016</string>
    <string name="mathematics">Mathematics</string>
    <string name="mathematics_answer">Mathematics (Answer)</string>
    <string name="add_math">Add Math</string>
    <string name="physics">Physics</string>
    <string name="tutor_name">Cikgu Imran (Shah Alam / Klang)</string>
    <string name="spm_seminar_2015">SPM Seminar 2015</string>
    <string name="title_activity_dashboard"></string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="seminar">Seminar</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="subjects">Subjects</string>
    <string name="tutors">Tutors</string>

    <string name="sign_up_label">Sign Up</string>
    <string name="log_in_label">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="confirm_hint">Confirm Password</string>
    <string name="facebook_app_id">1480481138695652</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>

    <string name="title_activity_welcome">Welcome Activity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome_to_rich_pleasure_academy">Welcome to Rich Pleasure Academy</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_subjects">SubjectsActivity</string>
    <string name="settings">Settings</string>


    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="start_now">Start Now</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="rich_pleasure_academy">Richpleasure Academy</string>
    <string name="featured">FEATURED</string>

    <string name="hello_world">Custom drawer implementation for Material design apps.\n\nMade by <b>Heinrich Reimer</b></string>
    <string name="hello_world2">Example of using <i>DrawerFrameLayout</i> for the drawer.\nThis drawer has a custom max width of 250dp.\n\nCheck out the sample code on GitHub!</string>
    <string name="hello_world3">Example of using <i>DrawerActivity</i> for the drawer.\nThis drawer shows theming and has a custom <i>Toolbar</i> set.\n\nVery simple ;)</string>
    <string name="action_github">GitHub</string>
    <string name="lorem_ipsum_short" translatable="false">Lorem ipsum</string>
    <string name="lorem_ipsum_medium" translatable="false">Lorem ipsum dolor sit amet</string>
    <string name="lorem_ipsum_long" translatable="false">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</string>

    <string name="drawer_frame_layout">DrawerFrameLayout</string>
    <string name="drawer_activity">DrawerActivity</string>
    <string name="billing">Billing</string>
    <string name="title_activity_subject_list">SubjectList</string>
    <string name="subject_list">Subject List</string>
    <string name="add">add</string>
    <string name="reset">Reset</string>
    <string name="search">Search</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="chapter_list">Chapter List</string>

    <string-array name="query_suggestions">
        <item>Android</item>
        <item>iOS</item>
        <item>SCALA</item>
        <item>Ruby</item>
        <item>JavaScript</item>
    </string-array>

    <string name="string_item_subffix">"Item: "</string>
    <string name="i_want_a_tutor">I want a Tutor</string>


    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

    <!--Search bar-->
    <string name="toolbar_title">Contacts</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>

</resources>
