<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_addmath_f4"
        android:orderInCategory="100"
        android:title="@string/add_math_form_4"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_addmath_f5"
        android:orderInCategory="100"
        android:title="@string/add_math_form_5"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_phy_f4"
        android:orderInCategory="100"
        android:title="@string/physics_form_4"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_phy_f5"
        android:orderInCategory="100"
        android:title="@string/physics_form_5"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_math_f4"
        android:orderInCategory="100"
        android:title="@string/math_form_4"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_math_f5"
        android:orderInCategory="100"
        android:title="@string/math_form_5"
        app:showAsAction="never" />
</menu>
